--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "express": "^4.18.2",
+    "mongoose": "^6.7.1",
     "nodemon": "^2.0.20"
   }
 }
