--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "repository": {
     "type": "git",
@@ -20,12 +23,15 @@
   "bugs": {
     "url": "https://github.com/Sambalogna/newsApi/issues"
   },
-  "homepage": "https://github.com/Sambalogna/newsApi#readme",
+  "homepage": "https://github.com/Sambalogna/newsApi",
   "dependencies": {
     "axios": "^1.1.3",
     "concurrently": "^7.5.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
