--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Sambalogna/newsApi.git"
+    "url": "git+https://github.com/Sambalogna/newsapi.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Sambalogna/newsApi/issues"
+    "url": "https://github.com/Sambalogna/newsapi/issues"
   },
-  "homepage": "https://github.com/Sambalogna/newsApi",
+  "homepage": "https://github.com/Sambalogna/newsapi",
   "dependencies": {
     "axios": "^1.1.3",
     "concurrently": "^7.5.0",
