--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "newsapi",
   "version": "1.0.0",
+  "homepage": "https://github.com/Sambalogna/newsapi",
   "description": "",
   "main": "server/server.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "build": "cd client && npm run build"
+
 
   },
   "repository": {
@@ -23,7 +25,7 @@
   "bugs": {
     "url": "https://github.com/Sambalogna/newsapi/issues"
   },
-  "homepage": "https://github.com/Sambalogna/newsapi",
+  
   "dependencies": {
     "axios": "^1.1.3",
     "concurrently": "^7.5.0",
